feat: 修復swagger token 無法驗證問題，加上 logout註解
